tests/gabc-dump/should-fail/unopened-underbrace.gabc
name: unopened underbrace;
%%
(c4) g(g) h(h[ub:1}])
